--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+/* Created by pahefu @ 2017 
+// Update to include NMS Gamepedia Wiki
+// Update to include performance updates
+*/
+
 @font-face {
   font-family: 'HubFontText';
   src: url('../fonts/ec.woff2') format('woff2') /* Super Modern Browsers */
